# smips

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  application.c  application.h  bank.c  bank.h  banks.c  banks.h  banks.lua  bloader.c  bundle.gresources.xml  feed.lua  inst.c  inst.h  inst.stringlist  insts.c  insts.h  isa.lua  load.c  load.h  loader.c  log.c  log.h  log.lua  luac.c  luacmpt.c  luacmpt.h  option.h  option.stringlist  optionarg.stringlist  options.c  options.h  options.stringlist  process.lua  regs.lua  rloader.c  smips.c  smips.h  smips.lua  splitters.lua  (+8 more)
